[project]
name = "hadamard-diffusion"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dashiell Stander", email = "dstander@protonmail.com" }
]
dependencies = [
    "numpy>=2.3.3",
    "ruff>=0.13.0",
    "jupyterlab>=4.4.7",
    "tqdm>=4.67.1",
    "ipywidgets>=8.1.7",
    "torch>=2.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hadamard_diffusion"]
